# scope

./: .gitignore  LICENSE  README.md  TECH_TREE.md  justfile  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  publish.yml
.tickets/: s-0110.md  s-07cc.md  s-0964.md  s-105a.md  s-252e.md  s-2bfe.md  s-595a.md  s-6b3b.md  s-aaca.md  s-ac0b.md  s-b41d.md  s-e4be.md  s-f087.md  s-ffe8.md
docs/: 00-philosophy.md  01-ux.md  02-architecture.md  03-orchestration-patterns.md
papers/: RLM.md
plans/: 2025-12-18.md  longlist.md
src/scope/: cli.py
src/scope/commands/: estimate.py  poll.py  resume.py  setup.py  spawn.py  tk.py  top.py  trajectory.py  uninstall.py  update.py  wait.py
src/scope/core/: abort.py  config.py  contract.py  lru.py  project.py  session.py  state.py  summarize.py  tmux.py
src/scope/hooks/: handler.py  install.py
src/scope/tui/: app.py
src/scope/tui/widgets/: session_tree.py
tests/: conftest.py  test_abort.py  test_alias.py  test_contract.py  test_dag.py  test_estimate.py  test_hooks.py  test_lru.py  test_pipe.py  test_poll.py  test_resume.py  test_session.py  test_setup.py  test_spawn.py  test_state.py  test_tk.py  test_tmux.py  test_top.py  test_trajectory.py  test_uninstall.py  test_wait.py
