[project]
name = "scopeai"
version = "0.1.4"
description = "Subagent orchestration for Claude Code"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "ada" }
]
keywords = [
    "claude",
    "claude-code",
    "subagent",
    "orchestration",
    "ai",
    "llm",
    "agent",
    "automation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "textual>=0.50.0",
    "click>=8.0.0",
    "orjson>=3.9.0",
    "watchfiles>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/adagradschool/scope"
Repository = "https://github.com/adagradschool/scope"
Issues = "https://github.com/adagradschool/scope/issues"

[project.scripts]
scope = "scope.cli:main"
scope-hook = "scope.hooks.handler:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope"]
